<resources>
    <string name="app_name">Budget</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_register_expenses">Register Expenses</string>
    <string name="title_create_category">Create Category</string>
    <string name="name">Name</string>
    <string name="name_of_the_new_category">Name of the new category</string>
    <string name="targeted_expenses_per_month">Targeted expenses per month</string>
    <string name="create">Create</string>
    <string name="primary_color">Primary color</string>
    <string name="secondary_color">Secondary color</string>
    <string name="information">Information</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="price_input">… €</string>
    <string name="price">Price*</string>
    <string name="category">Category*</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="date_display">date display</string>
    <string name="time_display">time display</string>
    <string name="dash">/</string>
    <string name="charts_displaying_data">charts displaying data</string>
</resources>