<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.manu.budget.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_register_expenses"
        android:name="de.manu.budget.ui.registerexpenses.RegisterExpensesFragment"
        android:label="@string/title_register_expenses"
        tools:layout="@layout/fragment_register_expenses" />

    <fragment
        android:id="@+id/navigation_create_category"
        android:name="de.manu.budget.ui.createcategory.CreateCategoryFragment"
        android:label="@string/title_create_category"
        tools:layout="@layout/fragment_create_category" />
</navigation>